--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "main.cpp"
+idf_component_register(SRCS "main.cpp" "edge_path_planning.cpp"
                     INCLUDE_DIRS "."
-                    REQUIRES esp_http_server esp_wifi nvs_flash)
+                    REQUIRES esp_http_server esp_wifi nvs_flash opencv zlib)
