--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -15,3 +15,4 @@ dependencies:
   #   # All dependencies of `main` are public by default.
   #   public: true
   espressif/opencv: ^4.10.0~3
+  espressif/zlib: ^1.3.1
